--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
+            <compilerArgs>
+                <arg>-parameters</arg>
+            </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -59,9 +62,24 @@
                         </excludes>
                     </filter>
                 </filters>
+                <transformers>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <mainClass>com.example.MainClass</mainClass>
+                    </transformer>
+                </transformers>
+                <artifactSet>
+                    <excludes>
+                        <exclude>org.jetbrains:annotations:META-INF/versions/9/module-info.class</exclude>
+                        <exclude>com.example:examination-api:META-INF/versions/9/module-info.class</exclude>
+                        <exclude>com.example:examination-string:META-INF/versions/9/module-info.class</exclude>
+                    </excludes>
+                </artifactSet>
             </configuration>
           </execution>
-        </executions>
+          </executions>
+          <configuration>
+              <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
+          </configuration>
       </plugin>
     </plugins>
     <resources>
@@ -84,6 +102,10 @@
       <repository>
           <id>worldedit-repo</id>
           <url>https://maven.enginehub.org/repo</url>
+      </repository>
+      <repository>
+          <id>aikar</id>
+          <url>https://repo.aikar.co/content/groups/aikar/</url>
       </repository>
   </repositories>
 
@@ -110,5 +132,45 @@
           <version>24.0.0</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>cloud.commandframework</groupId>
+          <artifactId>cloud-bukkit</artifactId>
+          <version>1.8.3</version>
+      </dependency>
+      <!--      <dependency>-->
+      <!--          <groupId>me.lucko</groupId>-->
+      <!--          <artifactId>commodore</artifactId>-->
+      <!--          <version>1.9</version>-->
+      <!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--          <groupId>cloud.commandframework</groupId>-->
+      <!--          <artifactId>cloud-core</artifactId>-->
+      <!--          <version>1.7.1</version>-->
+      <!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--          <groupId>cloud.commandframework</groupId>-->
+      <!--          <artifactId>cloud-annotations</artifactId>-->
+      <!--          <version>1.8.3</version>-->
+      <!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--          <groupId>cloud.commandframework</groupId>-->
+      <!--          <artifactId>cloud-bukkit</artifactId>-->
+      <!--          <version>1.8.3</version>-->
+      <!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--          <groupId>cloud.commandframework</groupId>-->
+      <!--          <artifactId>cloud-paper</artifactId>-->
+      <!--          <version>1.8.3</version>-->
+      <!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--          <groupId>cloud.commandframework</groupId>-->
+      <!--          <artifactId>cloud-minecraft-extras</artifactId>-->
+      <!--          <version>1.8.3</version>-->
+      <!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--          <groupId>net.kyori</groupId>-->
+      <!--          <artifactId>adventure-platform-bukkit</artifactId>-->
+      <!--          <version>4.3.0</version>-->
+      <!--      </dependency>-->
   </dependencies>
 </project>
