--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,58 +5,58 @@ api-version: 1.18
 authors: [ ItsMystic01 ]
 commands:
   fly:
-    description: Toggles fly.
+    description: Toggles flight ability
     aliases: [ flight ]
   kit:
     description: Gives the user a kit
-    aliases: [ kitme ]
+    aliases: [ kitme, kits ]
   message:
-    description: Messages a user privately.
+    description: Messages a user privately
     aliases: [ msg, tell ]
-  mysticalHelp:
-    description: Shows all the list of commands available.
+  mysticalhelp:
+    description: Shows all the list of commands available
     aliases: [ mysticalcommands ]
   rename:
-    description: Rename an item in hand.
+    description: Rename an item in hand
     aliases: [ itemrename ]
-  createKit:
-    description: Creates a kit.
+  createkit:
+    description: Creates a kit
     aliases: [ ck, kitcreate ]
-  deleteKit:
-    description: Deletes a kit.
+  deletekit:
+    description: Deletes a kit
     aliases: [ dk, kitdelete ]
-  setKitPrefix:
-    description: Sets kit prefix.
-    aliases: [ skprefix ]
-  editKit:
-    description: Edit contents of an existing kit.
+  setkitprefix:
+    description: Sets kit prefix
+    aliases: [ skprefix, skitprefix, skp ]
+  editkit:
+    description: Edit contents of an existing kit
     aliases: [ kitedit ]
-  checkAllRank:
-    description: Gives all existing ranks.
-    aliases: [ rankall, allrank, ranklist ]
-  checkPlayerRank:
-    description: Checks the rank a certain player has.
-    aliases: [ playerrank ]
-  createRank:
-    description: Creates a new rank.
-    aliases: [ newrank ]
-  deleteAllRank:
-    description: Deletes all available ranks in ranks.yml
+  createrank:
+    description: Creates a new rank
+    aliases: [ newrank, rankcreate ]
+  deleteallrank:
+    description: Deletes all available ranks in ranks.yml (with optional conditions)
     aliases: [ dar, dallrank ]
-  deleteRank:
-    description: Deletes an existing rank.
-    aliases: [ eradicaterank ]
-  giveRank:
-    description: Gives rank to a certain player.
+  deleterank:
+    description: Deletes an existing rank in ranks.yml
+    aliases: [ eradicaterank, rankdelete ]
+  giverank:
+    description: Gives a rank to a certain player
     aliases: [ giverole ]
-  removeRank:
-    description: Removes a rank from a certain player.
+  playerrank:
+    description: Checks the rank a certain player has
+    aliases: [ checkplayerrank ]
+  ranklist:
+    description: Gives all existing ranks
+    aliases: [ rankall, allrank, checkallrank ]
+  removerank:
+    description: Removes a rank from a certain player
     aliases: [ removerole ]
-  givePermission:
-    description: Gives a user additional permission.
+  givepermission:
+    description: Gives a user additional permission
     aliases: [ permissionadd ]
-  removePermission:
-    description: Removes a permission from a user.
+  removepermission:
+    description: Removes a permission from a user
     aliases: [ permissionremove ]
 
 permissions:
@@ -79,27 +79,27 @@ permissions:
     description: Permission over all role features of Mystical Plugin
     default: false
     children:
-      mystical.checkallrank: true
-      mystical.checkplayerrank: true
       mystical.createrank: true
       mystical.deleteallrank: true
       mystical.deleterank: true
       mystical.givepermission: true
       mystical.giverank: true
+      mystical.playerrank: true
+      mystical.ranklist: true
       mystical.removepermission: true
       mystical.removerank: true
   mystical.default:
     description: Permission over all default features of Mystical Plugin
     default: true
     children:
-      mystical.fly: false
+      mystical.fly: true
       mystical.kit: true
       mystical.message: true
       mystical.help: true
-      mystical.rename: false
+      mystical.rename: true
   mystical.fly:
     description: Permission to enable or disable flight.
-    default: op
+    default: true
   mystical.kit:
     description: Ability to claim kits.
     default: true
@@ -108,10 +108,10 @@ permissions:
     default: true
   mystical.help:
     description: Ability to use the help command of Mystical Commands
-    default: false
+    default: true
   mystical.rename:
     description: Ability to rename on-hand item.
-    default: op
+    default: true
   mystical.createkit:
     description: Ability to create custom-kits.
     default: op
